--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,13 @@
 	margin:0;
 	padding: 0;
 	box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+}
+
+body{
+    height: 100vh;
+    width: 100vw;
+    color: white;
 }
 
 .container{
@@ -11,36 +18,158 @@
 
 main{
     width: 100%;
-    height: calc(100% - 90px);
+    height: calc(100% - 80px);
     display: flex;
 }
 
+/* lavoro barra laterale */
+
 nav{
-    width: 200px;
+    width: 230px;
+    background-color: black;
+    padding-top: 20px;
+    color: hsl(0deg 0% 64%);
+    position: relative;
 }
+
+.left{
+    padding-left: 20px;
+}
+
+.logo{
+    width: 70%;
+}
+
+.logo img{
+    width: 100%;
+}
+
+.i-text{
+    margin-top: 30px;
+    display: flex;
+    flex-flow: row wrap;
+    align-content: baseline;
+    margin-bottom: 20px;
+}
+
+.i-text img{
+    height: 30px;
+    margin-bottom: 10px;
+}
+
+.i-text p{
+    display: inline-block;
+    width: 60%;
+    margin-left: 10px;
+    padding-top: 10px;
+    font-size: small;
+}
+
+.mini-title{
+    color: white;
+    font-size: large;
+}
+
+.create{
+    height: 40px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: flex;
+}
+
+.create i{
+    font-size: x-large;
+    color: black;
+    background-color: hsl(0deg 0% 64%);
+    height: 40px;
+    width: 40px;
+    margin-left: 20px;
+    text-align: center;
+    line-height: 40px;
+}
+
+.create p{
+    padding-top: 10px;
+    margin-left: 10px;
+    font-size: large;
+}
+
+nav ul{
+    list-style-type: none;
+}
+
+nav ul li{
+    margin-top: 10px;
+    font-size: small;
+}
+
+.bottom{
+    position: absolute;
+    bottom: 0;
+    font-size: xx-small;
+}
+
+.bottom img{
+    height: 10px;
+    margin-bottom: 5px;
+    vertical-align: middle;
+}
+
+.bottom p{
+    margin-bottom: 5px;
+    display: inline-block;
+    line-height: 10px;
+}
+
+hr{
+    width: 180px;
+    color: hsl(0deg 0% 64%);
+}
+
+.acc{
+    height: 30px;
+    margin-top: 10px;
+    color: white;
+    font-size: small;
+}
+
+.acc img{
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+.acc p{
+    line-height: 20px;
+}
+
+/* lavoro contenuto principale */
 
 .box{
     width: calc(100% - 200px);
+    background-color: hsl(219deg 26% 11%);
 }
 
 .top{
-    height: 90px;
+    height: 80px;
     width: 100%;
     position: fixed;
     z-index: 2;
     text-align: right;
     line-height: 90px;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .content{
     height: 100%;
     width: 100%;
-    padding-top: 90px;
+    padding-top: 80px;
     overflow-y: auto;
 }
 
 footer{
-    height: 90px;
+    height: 80px;
     width: 100%;
     background-color: #282828;
     position: fixed;
