--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,33 @@ hr{
     line-height: 20px;
 }
 
+/* effetti hover barra laterale */
+
+.i-text img:hover{
+    border-left: 1px solid hsl(84deg 76% 53%);
+    filter: brightness(100%);
+}
+
+.i-text img:hover + p{
+    color: white;
+}
+
+p:hover{
+    color: white;
+}
+
+.create:hover{
+    cursor: pointer;
+}
+
+.create:hover i{
+    background-color: white;
+}
+
+.create:hover p{
+    color: white;
+}
+
 /* lavoro contenuto principale */
 
 .box{
@@ -172,6 +199,13 @@ hr{
     position: absolute;
     right: 18%;
     top: 20%;
+    transition: all 3s;
+}
+
+/* effetto hover barra */
+
+.top a:hover{
+    font-size: large;
 }
 
 /* contenuto centrale */
@@ -196,6 +230,11 @@ hr{
     gap: 20px;
 }
 
+.content ul li{
+    padding: 5px;
+    position: relative;
+}
+
 h1, .title{
     display: block;
     margin-top: 30px;
@@ -212,6 +251,8 @@ h1, .title{
 .album{
     width: calc(100% / 6 - 10px);
     text-align: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .album img{
@@ -235,10 +276,48 @@ h1, .title{
     border-radius: 50%;
 }
 
+/* effetti hover contenuto principale */
+
+.album i{
+    width: 100%;
+    padding-top: 50%;
+    padding-bottom: 41%;
+    font-size: xx-large;
+    position: absolute;
+    top: -5%;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 2;
+    display: none;
+}
+
+ul li:hover{
+    color: white;
+    cursor: pointer;
+}
+
+.album img:hover + i{
+    display: inline-block;
+}
+
+.color{
+    width: 50%;
+    border: 1px solid hsl(84deg 76% 53%);
+    background-color: hsl(84deg 76% 53%);
+    position: absolute;
+    bottom: 0;
+    right: 30%;
+    display: none;
+}
+
+li:hover > .color{
+    display: block;
+}
+
 /* sezione footer */
 
 footer{
-    height: 80px;
+    height: 90px;
     width: 100%;
     background-color: #282828;
     position: fixed;
@@ -282,17 +361,26 @@ footer i{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-content: center;
 }
 
 .commands{
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    height: 42px;
+    gap: 10px;
 }
 
 .commands i{
     font-size: x-large;
-    margin: 10px;
+    margin-top: 10px;
+}
+
+.bigger{
+    display: inline-block;
+    width: 42px;
+    height: 42px;
+    text-align: center;
 }
 
 .timer{
@@ -303,15 +391,18 @@ footer i{
 }
 
 .charge{
+    height: 1px;
     width: 70%;
     background-color: hsl(0deg 0% 35%);
     border: 1px solid hsl(0deg 0% 35%);   
 }
 
 .charged{
+    height: 1px;
     width: 30%;
     background-color: hsl(0deg 0% 64%);
     border: 1px solid hsl(0deg 0% 64%); 
+    position: relative;
 }
 
 .time{
@@ -329,4 +420,37 @@ footer i{
 
 .right .two{
     width: 30%;
+}
+
+/* effetti hover footer */
+
+.altext:hover .grey{
+    text-decoration: underline;
+    color: white;
+}
+
+.icons i:hover{
+    color: white;
+    cursor: pointer;
+}
+
+.commands .fa-circle-play:hover{
+    font-size: xx-large;
+}
+
+.charge:hover .charged{
+    border: 1px solid hsl(84deg 76% 53%);
+    background-color: hsl(84deg 76% 53%);
+}
+
+.charged .fa-circle{
+    position: absolute;
+    right: -20px;
+    top: -12px;
+    font-size: small;
+    display: none;
+}
+
+.charge:hover .charged .fa-circle{
+    display: inline-flex;
 }
