--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body{
     width: 100vw;
     color: white;
     min-width: 500px;
+    min-height: 90px;
+    overflow-y: hidden;
 }
 
 .container{
@@ -26,6 +28,7 @@ main{
 /* lavoro barra laterale */
 
 nav{
+    height: calc(100vh - 90px);
     width: 230px;
     background-color: black;
     padding-top: 20px;
@@ -74,10 +77,8 @@ nav{
 }
 
 .create{
-    height: 40px;
     margin-top: 10px;
     margin-bottom: 20px;
-    display: flex;
 }
 
 .create i{
@@ -95,16 +96,11 @@ nav{
     padding-top: 10px;
     margin-left: 10px;
     font-size: large;
-}
-
-.big-bottom{
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
+    display: inline-block;
 }
 
 nav ul{
-    height: 50%;
+    height: calc(100vh - 480px);
     list-style-type: none;
     overflow-y: auto;
 }
@@ -115,6 +111,10 @@ nav ul li{
 }
 
 .bottom{
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
     font-size: xx-small;
     background-color: black;
 }
@@ -134,7 +134,7 @@ nav ul li{
 }
 
 hr{
-    width: 180px;
+    width: 80%;
     color: hsl(0deg 0% 64%);
 }
 
@@ -192,7 +192,6 @@ p:hover{
 /* lavoro contenuto principale */
 
 .box{
-    min-width: 500px;
     width: calc(100% - 200px);
     background-color: hsl(219deg 26% 11%);
 }
@@ -496,10 +495,6 @@ footer i{
 
     body{
         overflow-x: hidden;
-    }
-
-    .top a{
-        right: 220px;
     }
     
     .recent{
