risolto bug query

--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,11 @@ footer i{
         display: none;
     }
 
+    .bottom{
+        position: absolute;
+        top: 89%;
+    }
+
     .bottom img{
         margin-left: 6px;
     }
